# AI_Tools_Directory

./: .gitignore  CONTRIBUTING.md  ai_tools_seed.csv  competitors  implementation_plan.md  pyproject.toml
ai_tools_dir/: README.md  hooks.py  modules.txt
ai_tools_dir/ai_tools_directory/doctype/category/: category.json  category.py
ai_tools_dir/ai_tools_directory/doctype/review/: review.json  review.py
ai_tools_dir/ai_tools_directory/doctype/stack/: stack.json  stack.py
ai_tools_dir/ai_tools_directory/doctype/tool/: tool.json  tool.py
ai_tools_dir/ai_tools_directory/doctype/tool_vote/: tool_vote.json  tool_vote.py
ai_tools_dir/api/: import_tools.py  ingestion.py  scrape.py  track.py  vote.py
ai_tools_dir/etl/: backfill_categories.py  import_csv.py  import_tools.py
ai_tools_dir/events/: reviews.py
ai_tools_dir/public/css/: ai_tools.css
ai_tools_dir/public/js/: global_menu.js  home.js
ai_tools_dir/public/js/doctype_list/: tool_list.js
ai_tools_dir/templates/pages/: categories.html  index.html  index.py  tool.html  tools.html
ai_tools_dir/www/: logout.py
ai_tools_dir/www/categories/: _slug.html  _slug.py  index.html
ai_tools_dir/www/tools/: _slug.html  _slug.py
scripts/: bootstrap_macos.sh
scripts/CloudflareBypassForScraping/: README.md  debug_href.py  debug_page_structure.py  requirements.txt  scraper.py  simple_test.py  start_chrome.sh  test_connection.py  test_scraper.py
scripts/scraper/: config.example.yaml  config.yaml  requirements.txt  scrape.py
